--- a/css/media.css
+++ b/css/media.css
@@ -1,5 +1,2 @@
 
-
-@media 
-usar media queries en esto..  po
-ner medidas  y ver que quieres que se vea en ellos y que no. conn caracts tipo css
+@media ()
