--- a/css/main.css
+++ b/css/main.css
@@ -35,17 +35,25 @@
 	margin-bottom:5%;
 }
 
-.subuno{
+#subuno{
 
 	height: 70%;
 	margin-top:15%;
 	background-color: #F7B617;
 	color: #FFF;
-	margin-left:58.3%;
 	padding-top: 2%;
 	border: 1px solid f2c252;
 }
 
+#subuno2{
+	background-color: #F7B617;
+	height:70vh;
+	margin-top: 15vh;
+}
+
+#subuno2 h3{
+	margin-top: 5%;
+} 
 
 .logbox{
 	width:90%;
@@ -68,14 +76,14 @@
 	color:#000;
 }
 
-#btn-con{
+#btn-con, #btn-desapp{
 	padding: 2%;
 	border-style:none;
 	border-radius: 4px;
 	color:#000;
 }
 
-#btn-reg:hover, #btn-con:hover{
+#btn-reg:hover, #btn-con:hover, #btn-desapp:hover{
 	color:#ACA7A7;
 	background-color: #403F3F;
 	border: 1px solid #ACA7A7;
@@ -165,7 +173,6 @@
 
 .btn-con2:hover {
 	border-style:none;
-	border
 	border-radius: 4px;
 	background-color: #fff;
 	color: #F7B617;
